# BevySki

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  REVERSE_ENGINEERING.md  ROADMAP.md
.opencode/: AGENTS.md
courses/: beginner.json
crates/bevyski/: Cargo.toml
crates/bevyski/src/: components.rs  constants.rs  main.rs  resources.rs  states.rs
crates/bevyski/src/systems/: collision.rs  course.rs  mod.rs  movement.rs  rendering.rs  run_flow.rs  settings_ui.rs  ski_lodge.rs
crates/pict-resources/: Cargo.toml  README.md
crates/pict-resources/src/: drawing_context.rs  lib.rs  shared.rs  v1.rs  v2.rs
crates/resfork/: Cargo.toml  README.md
crates/resfork/examples/: list_resources.rs
crates/resfork/src/: lib.rs  types.rs
doc/: REVERSE_ENGINEERING.md
src/: components.rs  constants.rs  main.rs  resources.rs  states.rs
src/systems/: collision.rs  course.rs  mod.rs  movement.rs  rendering.rs
