[workspace]
resolver = "2"
members = [
    "crates/bevyski",
    "crates/resfork",
]

[workspace.package]
edition = "2024"
authors = ["BevySki Contributors"]
license = "GPL-3.0"

[workspace.dependencies]
# Bevy game engine
bevy = "0.18"

# Utilities
byteorder = "1.5"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Internal crates
resfork = { path = "crates/resfork" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
