[workspace]
resolver = "2"
members = [
    "crates/bevyski", "crates/pict-resources",
]

[workspace.package]
edition = "2024"
authors = ["BevySki Contributors"]
license = "GPL-3.0"

[workspace.dependencies]
# Bevy game engine
bevy = "0.18"

# Utilities
base64 = "0.22.1"
binrw = "0.15.1"
bitflags = "2.11"
byteorder = "1.5"
fourcc-rs = "0.2.1"
hound = "3.5.1"
resource-fork-rs = "0.2"
rand = "0.10"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snd-resources = "0.1.2"
thiserror = "2.0.18"
pict-resources = { path = "crates/pict-resources" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
