[package]
name = "bevyski"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Modern cross-platform rewrite of the classic MacSki game using Bevy"
license.workspace = true

[dependencies]
base64.workspace = true
bevy.workspace = true
binrw.workspace = true
bitflags.workspace = true
fourcc-rs.workspace = true
hound.workspace = true
rand.workspace = true
rfd.workspace = true
resource-fork-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
snd-resources.workspace = true
pict-resources.workspace = true
